--- a/HelloWorld/pom.xml
+++ b/HelloWorld/pom.xml
@@ -63,6 +63,14 @@
     <artifactId>jsch</artifactId>
     <version>0.1.54</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/org.json/json -->
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20090211</version>
+</dependency>
+
 		
 	</dependencies>
 	<build>
