--- a/HelloWorld/pom.xml
+++ b/HelloWorld/pom.xml
@@ -114,6 +114,12 @@
 			<version>20090211</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.26</version>
+		</dependency>
 
 	</dependencies>
 	<build>
